cmake_minimum_required(VERSION 3.5)
project(overplus)
set(CMAKE_CXX_STANDARD 17)
#add_definitions(-Wall)
#
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
#set(Boost_USE_STATIC_LIBS on)
include_directories(.)
add_subdirectory(Shared)
add_subdirectory(Server)
add_subdirectory(Protocal)
add_subdirectory(Client)
find_package(Boost 1.66  COMPONENTS system  REQUIRED)
find_package(Threads REQUIRED)
find_package(OpenSSL REQUIRED)
add_executable(overplus Server/main.cpp)
target_link_libraries(overplus pthread shared server proto OpenSSL::SSL)
target_include_directories(overplus PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(overplus ${Boost_LIBRARIES})
##
add_executable(overplus_client Client/main.cpp)
target_link_libraries(overplus_client pthread shared client proto OpenSSL::SSL)
target_include_directories(overplus_client PRIVATE ${Boost_INCLUDE_DIR})
target_link_libraries(overplus_client ${Boost_LIBRARIES})
